# ensemble

./: .env  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  Dockerfile  LICENSE  README.md  RELEASE_NOTES.md  docker-compose.yml  pyproject.toml  quickRUN.md  quickRUN.sh  requirements-web.txt  requirements.txt  run.sh
.github/workflows/: ci.yml
cache/: cache_store.json
config/: models.yaml  settings.example.yaml  settings.yaml
docs/: AGENT_RUN_REPORT.md  CODE_EXPLANATION.md  CODE_FLOW.md  CONTRIBUTING.md  RELEASE_CHECKLIST.md
docs/assignment/: Ensemble_Assessment_Requirements_Checklist_v2.xlsx
docs/notes/: CODEBASE_STRUCTURE_v2.md  DIAGRAMS_v2.md  Ensemble_Solution_v2.html  SOLUTION_DESIGN_v2.md  spec-driven.txt
src/: __init__.py
src/agent/: __init__.py  cli.py  config.py  models.py
src/agent/agents/: base.py  critique.py  extraction.py  planner.py  synthesis.py
src/agent/api/: app.py
src/agent/cache/: cache_service.py
src/agent/core/: orchestrator.py  router.py  state.py
src/agent/evaluation/: evaluator.py  metrics.py
src/agent/guardrails/: __init__.py  input_guard.py  output_guard.py
src/agent/llm/: __init__.py  aistudio_provider.py  base_provider.py  groq_provider.py  mock_provider.py  retry.py
src/agent/observability/: cost_tracker.py  logger.py  tracer.py
src/agent/prompts/: __init__.py  (+4 more)
tests/: conftest.py
tests/fixtures/: scenarios.json
tests/integration/: test_cms_integration.py
tests/unit/: test_cms_coverage_tool.py  test_evaluator.py  test_full_pipeline.py  test_orchestrator.py
traces/: sample_run.json
(+10 files in other folders)
