[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claims-appeal-agent"
version = "0.1.0"
description = "A denial letter to evidence-grounded appeal package agent."
readme = "README.md"
authors = [
  { name = "Ensemble AI" }
]
requires-python = ">=3.10"

dependencies = [
  "pydantic>=2.7,<3.0",
  "httpx>=0.24.0,<0.31.0",
  "python-dotenv>=1.0.0,<1.0.2",
  "ruamel.yaml>=0.17.21,<1.0.0",
  "typing_extensions>=4.7.1,<5.0.0",
  "pytest>=8.0.0,<9.0.0",
  "pytest-mock>=3.10.0,<4.0.0"
]

[project.optional-dependencies]
dev = [
  "ruff>=0.0.267,<0.1.0",
  "mypy>=1.10.0,<1.11.0",
  "black>=24.3.0,<25.0.0"
]

[tool.ruff]
line-length = 88

[tool.pytest]
testpaths = ["tests"]

[tool.mypy]
python_version = 3.10
strict = true
